<resources>
    <!-- Values Strings for : English (Default) -->

    <string name="app_name">Go4Launch</string>

    <string name="main_activity_description">Find a nice restaurant and invite your co-corkers for lunch!</string>

    <string name="login">Connexion</string>
    <string name="chat_with_mentor">Create an account</string>
    <string name="sign_in">Create an account</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"You have received a notification"</string>
    <string name="notification_message_with_restId">Today you lunch at : </string>
    <string name="notification_message_without_restId">You don\'t choose where to eat yet ?!</string>

    <!-- MAIN ACTIVITY -->
    <string name="toolbar_title_main_activity">I\'m Hungry !</string>
    <string name="error_not_connected">You must log in!</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_login_text_logged">Display Profil</string>
    <string name="button_login_text_not_logged">Connexion...</string>
    <string name="No_restaurant_selected_yet">You haven\'t chosen a restaurant yet !</string>

    <!-- LOGIN ACTIVITY -->
    <string name="main_activity_sub_title">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="email_login_button">Sign in with email address</string>
    <string name="facebook_login_button">Sign in with Facebook</string>
    <string name="google_login_button">Sign in with Google</string>
    <string name="twitter_login_button">Sign in with Twitter</string>
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Aucune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="email_already_used">Email address already linked to an existing account.</string>
    <string name="email_already_used_message">&#160;is already linked to an existing account via Google sign in.
        \nWould you like to log in to your Google account to link %1$s sign in method to your Go4Lunch account ?</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapview">Map View</string>
    <string name="bottom_navigation_menu_listview">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <!-- PRINCIPAL ACTIVITY -->
    <string name="toolbar_title_message">I\'m Hungry</string>

    <!-- WORKMATES ACTIVITY -->
    <string name="is_eating_at"> is eating at </string>
    <string name="hasnt_decided"> hasn\'t decided yet</string>

    <!--DETAIL RESTAURANT ACTIVITY-->
    <string name="restaurant_name">Restaurant Name</string>
    <string name="detail_restaurant_address">Address</string>
    <string name="detail_restaurant_button_call">CALL</string>
    <string name="detail_restaurant_button_like">LIKE</string>
    <string name="detail_restaurant_button_website">WEBSITE</string>
    <string name="no_phone_number">No phone number registered !</string>
    <string name="like_button">You like : </string>
    <string name="no_website">Website doesn\'t exist !</string>
    <string name="place_open">Open</string>
    <string name="place_close">Close</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="toolbar_title_settings_activity">Settings</string>
    <string name="button_text">Change language</string>
    <string name="alert_dialog_menu_language">Choose your language</string>
    <string-array name="choose_language">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string name="enable_notifications_rest_alert">Enable notifications alert for Restaurant</string>
    <string name="notifications_on">Notications On !</string>
    <string name="notifications_off">Notications Off !</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <string name="facebook_application_id">874253313220858</string>
    <string name="fb_login_protocol_scheme">fb874253313220858</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_map_fragment">I\'m Hungry!</string>
    <string name="hello_list_fragment">I\'m Hungry!</string>
    <string name="hello_workmates_fragment">Available workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation Drawer : to toggle the open close button of the navigation drawer -->
    <!-- Used in NavigationDrawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="default_city">San Francisco</string>
    <string name="place_type">restaurant</string>
</resources>