<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:layout_marginBottom="@dimen/average_margin"
    android:background="@drawable/background_image"
    android:padding="@dimen/average_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/drawer_header_user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/drawer_header_user_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_anon_user_48dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/drawer_header_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/average_margin"
        android:textSize="@dimen/average_text_size"
        android:textStyle="bold"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toTopOf="@id/drawer_header_user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/drawer_header_user_picture"
        app:layout_constraintTop_toTopOf="@id/drawer_header_user_picture"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/text_input_username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/drawer_header_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/average_margin"
        android:textSize="@dimen/small_text_size"
        android:textStyle="normal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="@id/drawer_header_user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/drawer_header_user_picture"
        app:layout_constraintTop_toBottomOf="@id/drawer_header_user_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/text_view_email" />

</androidx.constraintlayout.widget.ConstraintLayout>