<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-116dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:src="@drawable/ic_logo_go4lunch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_app_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_activity_app_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo_image_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_sub_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/main_activity_sub_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_app_name_text_view" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_large_margin"
            android:layout_marginTop="@dimen/average_margin"
            android:layout_marginEnd="@dimen/very_large_margin"
            android:background="@drawable/bg_facebook_login_button"
            android:onClick="onClick"
            android:paddingStart="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/facebook_login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_sub_title_text_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_large_margin"
            android:layout_marginTop="@dimen/average_margin"
            android:layout_marginEnd="@dimen/very_large_margin"
            android:background="@drawable/bg_google_login_button"
            android:onClick="onClick"
            android:paddingStart="@dimen/average_padding"
            android:paddingEnd="@dimen/average_padding"
            android:text="@string/google_login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_facebook_login_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_twitter_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_large_margin"
            android:layout_marginTop="@dimen/average_margin"
            android:layout_marginEnd="@dimen/very_large_margin"
            android:background="@drawable/bg_twitter_login_button"
            android:onClick="onClick"
            android:paddingStart="@dimen/average_padding"
            android:paddingEnd="@dimen/average_padding"
            android:text="@string/twitter_login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_google_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>